--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,13 @@
 {
+  "routes": [
+    {
+      "src": "/sitemap.xml",
+      "headers": {
+        "Content-Type": "application/xml"
+      },
+      "dest": "/sitemap.xml"
+    }
+  ],
   "rewrites": [
     {
       "source": "/(.*)",
